# jbmanager

./: .cookiecutter.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  labeler.yml  release.yml  tests.yml
docs/: conf.py  index.md  reference.md  usage.md
src/jbmanager/: __init__.py  __main__.py  lib.py
templates/: config.yaml
templates/INPUT/INSTITUTO/SEMANAX/: INSCRIPCION.xlsx  RESUMEN.xlsx
templates/OUTPUT/catolica/: LISTA.xlsx
tests/: __init__.py  test_main.py
