[tool.poetry]
name = "jbmanager"
version = "0.0.0"
description = "JBManager"
authors = ["Edwin Yllanes <e.yllanescucho@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/eyllanesc/jbmanager"
repository = "https://github.com/eyllanesc/jbmanager"
documentation = "https://jbmanager.readthedocs.io"
classifiers = [
    "Development Status :: 1 - Planning",
]

[tool.poetry.urls]
Changelog = "https://github.com/eyllanesc/jbmanager/releases"

[tool.poetry.dependencies]
python = "^3.8"
click = ">=8.0.1"
pydantic = "^2.5.3"
openpyxl = "^3.1.2"
pyyaml = "^6.0.1"

[tool.poetry.group.pre-commit]
optional = true

[tool.poetry.group.pre-commit.dependencies]
black = ">=21.10b0"
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
isort = ">=5.10.1"
pre-commit = "^2.15.0"
pre-commit-hooks = "^4.0.1"

[tool.poetry.group.safety]
optional = true

[tool.poetry.group.safety.dependencies]
safety = "^1.10.3"

[tool.poetry.group.coverage]
optional = true

[tool.poetry.group.coverage.dependencies]
coverage = {extras = ["toml"], version = "^6.1"}

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
pytest = "^6.2.5"
Pygments = "^2.10.0"

[tool.poetry.group.mypy]
optional = true

[tool.poetry.group.mypy.dependencies]
mypy = "^0.910"

[tool.poetry.group.typeguard]
optional = true

[tool.poetry.group.typeguard.dependencies]
typeguard = "^2.13.0"

[tool.poetry.group.xdoctest]
optional = true

[tool.poetry.group.xdoctest.dependencies]
xdoctest = {extras = ["colors"], version = "^0.15.10"}

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^4.3.0"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = "^3.0.2"
furo = ">=2021.11.12"

[tool.poetry.scripts]
jbmanager = "jbmanager.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["jbmanager", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
